--- a/shop/.env
+++ b/shop/.env
@@ -5,3 +5,9 @@ HOST=127.0.0.1
 PORT=5432
 PASSWORD=aboba9752obama
 USER=postgres
+
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USE_TLS=1
+EMAIL_HOST_USER=alinatnalieva@gmail.com
+EMAIL_HOST_PASSWORD=oaafmixrteupcdwd
