--- a/shop/.env
+++ b/shop/.env
@@ -1,13 +1,13 @@
-SECRET_KEY=django-insecure-1)o%tph@qvp!liqacax-r=fmm@pfem=6albliap)z9^$p7yq_x
-DEBUG=1
-NAME=django_shop_db
-HOST=127.0.0.1
-PORT=5432
-PASSWORD=aboba9752obama
-USER=postgres
+SECRET_KEY=
+DEBUG=
+NAME=
+HOST=
+PORT=
+PASSWORD=
+USER=
 
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_USE_TLS=1
-EMAIL_HOST_USER=alinatnalieva@gmail.com
-EMAIL_HOST_PASSWORD=oaafmixrteupcdwd
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_USE_TLS=
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
